# recallchemy

./: .gitignore  LICENSE  README.md  pyproject.toml  recommendations.json  recommendations_multi.comparison.html  recommendations_multi.comparison.md  recommendations_multi.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tune-from-lfs-dataset.yml
datasets/: ambiguous-hard-angular.npz  sample-10000x128-angular.npz
scenarios/: ambiguous-hard.yaml  example.yaml
scripts/: generate_ambiguous_dataset.py
src/recallchemy/: __init__.py  backends.py  cli.py  comparison_analysis.py  dataset.py  metrics.py  optimizer.py  priors.py  report.py  scenario.py  tracking.py  types.py
src/recallchemy/backends_impl/: __init__.py  annoy.py  base.py  faiss_ivf.py  hnswlib.py  registry.py  utils.py
src/recallchemy/tuning/: __init__.py  importance.py  models.py  runner.py  sampler.py  selection.py
tests/: test_backends_search_space.py  test_comparison_analysis.py  test_dataset.py  test_metrics.py  test_optimizer.py  test_optimizer_two_stage.py  test_report.py  test_scenario.py  test_tracking.py
